welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:24: error: ')' expected but '}' found.
  } else {
  ^